Remove old nav and mobile header includes, restyle product description page, correct page reviews structure, make description field collapsable

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -193,7 +193,7 @@ h1 {
 .search-bar {
     display: none;
     position: absolute;
-    font-size: 1.6rem;
+    font-size: 1.1rem;
     top: 6.2rem;
     margin-left: calc(50vw - 10.65rem);
 }
@@ -211,7 +211,7 @@ h1 {
 
 .search-bar input[type="text"]  {
     outline: none;
-    color: #EBEBEB;
+    color: #DA7092cc;
 }
 
 .search-bar button {
@@ -352,6 +352,14 @@ footer div p {
     width: 100vw;
 }
 
+.dropdown-menu {
+    background: #64a3acf5;
+}
+
+.dropdown-item {
+    color: #EBEBEB !important;
+}
+
 .category-banner {
     width: 100vw;
     color: #EB7640 !important;
@@ -371,7 +379,53 @@ footer div p {
     color: #EBEBEB;
 }
 
-/*--------------------------------Product Description-*/
+/*--------------------------------Product Description---*/
+
+.go-back-to-products {
+    position: absolute;
+    font-size: 2rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+
+.go-back-to-products:hover, .fa-circle-arrow-up:hover {
+    color: #DA7092;
+}
+
+.description-container {
+    margin-top: 8vh;
+    height: fit-content;
+    min-height: calc(92vh - 80px);
+}
+
+.overlay-card-details {
+    height: 100%;
+    padding-bottom: 3.5rem;
+    min-height: calc(92vh - 80px);
+}
+
+.rating-button, .expand-collapse-button {
+    background: #886a2e00;
+    font-size: 1rem;
+    color: #EBEBEB;
+    border-color: #eb764000;
+}
+
+.product-details-container {
+    overflow-y: auto;
+    background: #64a3ac46;
+}
+
+.decoration-stripe {
+    height: 1rem;
+    width: 100%;
+    margin: 0;
+}
+
+.img-fluid {
+    min-height: 4rem;
+    min-width: 4rem;
+}
 /*-------------------------------------Edit Product---*/
 
 /*----------------------------------------Colour Palette and Texture---*/
